<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="187dp"
        tools:layout_editor_absoluteY="155dp">

        <Button
            android:id="@+id/exchange_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/exchange_rates"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gold_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/gold"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/converter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/converter"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>