<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.GoldActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gold_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15sp"
                android:text="@string/gold_title"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gold_rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24sp"
                android:layout_marginTop="30sp"
                android:text="@string/gold_rate_tv_default"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/gold_thirty_days_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginTop="36sp"
                android:layout_marginBottom="8sp"
                android:text="@string/thirty_day_chart_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/gold_thirty_days_chart"
                android:layout_width="match_parent"
                android:layout_height="300sp" >

            </com.github.mikephil.charting.charts.LineChart>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>