<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="Waluta"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/today_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/today_rate_tv_default"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/yesterday_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/yesterday_rate_tv_default"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/seven_days_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginTop="36sp"
                android:layout_marginBottom="8sp"
                android:text="@string/seven_day_chart_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/seven_days_chart"
                android:layout_width="match_parent"
                android:layout_height="300sp" />

            <TextView
                android:id="@+id/thirty_days_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24sp"
                android:layout_marginTop="36sp"
                android:layout_marginBottom="8sp"
                android:text="@string/thirty_day_chart_desc"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/thirty_days_chart"
                android:layout_width="match_parent"
                android:layout_height="300sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>